log
Thu 09 May 2024 03:04:35 PM UTC: 
 tests:  1|8
total_score: 0/70
279d065
Thu 09 May 2024 03:07:40 PM UTC: 
 treemap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
f8726c5
Thu 09 May 2024 03:14:31 PM UTC: 
 treemap.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:80:51: error: expected ‘)’ before ‘{’ token
   80 |             if(is_equal(tree, key, aux->pair->key)
      |               ~                                   ^
      |                                                   )
   81 |             {
      |             ~                                      
treemap.c:96:9: error: expected expression before ‘}’ token
   96 |         }
      |         ^
Compilation failed
bf8520f
